--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
       <div class=" rectangle">
-    <img  class="square" src="C:\Users\Lenovo\Downloads\qr-code-component-main\qr-code-component-main\images\image-qr-code.png" alt="">
+    <img  class="square" src=".\image-qr-code.png" alt="">
     <h1 class="title">Improve your front-end skills by building projects</h1>
     <h4 class="subtext">Scan the QR code to visit Fronted Mentor and take your coding skills to the next level</h4>
   </div>
